--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,22 @@
 <resources>
     <string name="app_name">praktikum6</string>
+    <string name="bck_btn">Back</string>
+    <string name="confirm">Konfirmasi</string>
+    <string name="next">Lanjut</string>
+    <string name="cancel">Batal</string>
+    <string name="vanilla">Vanilla</string>
+    <string name="lemon">Lemon</string>
+    <string name="natural">Natural</string>
+    <string name="milky">Milky</string>
+    <string name="lyche">Lyche</string>
+    <string name="order_summary">Ringkasan Order</string>
+    <string name="send">Send Order to Another App</string>
+    <string name="quantity">Jumlah</string>
+    <string name="flavor">Rasa</string>
+    <string name="subtotal_price">Subtotal : Rp. %s</string>
+    <string name="total_price">Total %s</string>
+    <string name="name">Nama</string>
+    <string name="notlp">Telepon</string>
+    <string name="almt">Alamat</string>
+
 </resources>
